[gd_scene load_steps=5 format=3 uid="uid://bw6bvmfop5wps"]

[ext_resource type="Script" path="res://scripts/sight_singing_game.gd" id="1_llsvv"]
[ext_resource type="AudioStream" uid="uid://c4ehkxcggktpr" path="res://assets/music/Locriana's Lament.mp3" id="2_luyq3"]
[ext_resource type="VideoStream" path="res://assets/videos/clouds_scroll.ogv" id="5_72u8p"]
[ext_resource type="PackedScene" uid="uid://cuvdi3qyruxps" path="res://scenes/staff_game.tscn" id="9_ypylt"]

[node name="SightSingingGame" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_llsvv")
music_xml = "res://assets/musicxml/Locriana Tenor.xml"
music_mp3 = ExtResource("2_luyq3")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0
stream = ExtResource("5_72u8p")
autoplay = true
expand = true
loop = true

[node name="Shadow" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -67.0
offset_top = 388.0
offset_right = 2040.0
offset_bottom = 695.0
color = Color(0, 0, 0, 0.654902)

[node name="StaffGame" parent="." instance=ExtResource("9_ypylt")]
position = Vector2(0, 464)
scale = Vector2(0.5, 0.5)

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 659.0
offset_top = 454.0
offset_right = 1174.0
offset_bottom = 629.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "Start"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
